<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">事务提醒</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_remind_add">RemindAddActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="insert_sucess">添加提醒成功！</string>
    <string name="insert_failed">添加失败！</string>
    <string name="title_activity_week_and_day">WeekAndDayActivity</string>

    <string-array name="all_week">
        <item>每天</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
	<string name="done">完成</string>
	<string name="undone">未完成</string>
    <string name="addremind">添加提醒</string>
    <string name="reminddesc">提醒内容：</string>
    <string name="remindrepeat">提醒间隔：</string>
    <string name="remindtype">提醒类型：</string>
    <string name="currentdate">当前选择日期：</string>
    <string name="currenttime">当前选择时间：</string>
    <string name="selecttime">选择时间</string>
    <string name="selectdate">选择日期</string>
    <string name="enter">确定</string>
    <string name="tenminute">10分钟</string>
    <string name="halfhour">半小时</string>
    <string name="onehour">一小时</string>
    <string name="twohour">两小时</string>
    <string name="sixhour">六小时</string>
    <string name="everyday">每天</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednsday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="empty_remind">这里是空的!=_=||</string>
    <string name="select_date">选择日期</string>

</resources>
