<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/selecttime" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:numbersSelectorColor="#000000" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/currenttime"
           android:textSize="15sp" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:paddingRight="10dp"
           android:textSize="15sp" />
    </LinearLayout>
	 <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/week_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/remindtype"
           android:textSize="15sp" />

        <TextView
            android:id="@+id/current_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/everyday"
           android:textSize="15sp" />
    </LinearLayout>
     <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/repeat_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/remindrepeat"
           android:textSize="15sp" />

        <TextView
            android:id="@+id/remind_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:paddingRight="10dp"
            android:text="@string/tenminute"
           android:textSize="15sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/reminddesc"
           android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/reminddesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/remind_desc"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="5"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="2dp"
        android:scrollbars="vertical" >
    </EditText>

    <Button
        android:id="@+id/insertRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selecter"
        android:gravity="center"
        android:minWidth="120dp"
        android:text="@string/addremind"
       android:textSize="15sp" />

</LinearLayout>