<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/date_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:calendarViewShown="false"
            android:endYear="2500" />
        <!--
             <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_centerVertical="true"
            android:alpha="0.2"
            android:background="#94C5E3" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="122dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="年" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="月" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="日" />
        </LinearLayout>
        -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/select_date"
           android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:text="@string/currentdate"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/current_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:gravity="center_vertical|right"
           android:textSize="15sp" />
    </LinearLayout>
	  <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/date_repeat_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/remindrepeat"
           android:textSize="15sp" />

        <TextView
            android:id="@+id/date_remind_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:gravity="center_vertical|right"
           android:textSize="15sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/reminddesc"
           android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/reminddesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/remind_desc"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="5"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="2dp"
        android:scrollbars="vertical" >
    </EditText>

    <Button
        android:id="@+id/insertRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selecter"
        android:gravity="center"
        android:minWidth="120dp"
        android:text="@string/addremind"
       android:textSize="15sp" />

</LinearLayout>